--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
             <!--Quando a largura da tela for grande ele irá pegar 3 colunas. Quando estiver em tamanho médio
                 vai pegar 6 colunas e em tamanho pequeno vai pegar 12 colunas-->
             <div class="col-xl-3 col-md-6 col-sm-12 mt-5">
-                <img src="./atividade/img/icon/4.png" alt="">
+                <img src="./img/icon/4.png" alt="">
                 <p class="conteudo">
                    Apaixonado por literatura desde a adolescência.
                 </p>
             </div>
             <div class="col-xl-3 col-md-6 col-sm-12 mt-5">
-                <img src="./atividade/img/icon/1.png" alt="">
+                <img src="./img/icon/1.png" alt="">
                 <p class="conteudo">
                    Um romance publicado & Cinco textos em diferentes antalogias.
                 </p>
             </div>
             <div class="col-xl-3 col-md-6 col-sm-12 mt-5">
-                <img src="./atividade/img/icon/3.png" alt="">
+                <img src="./img/icon/3.png" alt="">
                 <p class="conteudo">
                     Um pensador a cerca de seu tempo.
                 </p>
             </div>
             <div class="col-xl-3 col-md-6 col-sm-12 mt-5">
-                <img src="./atividade/img/icon/2.png" alt="">
+                <img src="./img/icon/2.png" alt="">
                 <p class="conteudo">
                     Não suporta injustias sociais!
                 </p>
@@ -120,20 +120,20 @@
             <div class="col-lg-4 col-md-6 col-sm-12">
 
                 <!--A classe img-fluid serve pra deixar a imagem responsiva e proporcional-->
-                <img src="./atividade/img/obras/1.png" class="img-fluid mb-3 rounded" alt="Imagem 1">
+                <img src="./img/obras/1.png" class="img-fluid mb-3 rounded" alt="Imagem 1">
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
-                <img src="./atividade/img/obras/2.png"class="img-fluid mb-3 rounded" alt="Imagem 2">
+                <img src="./img/obras/2.png"class="img-fluid mb-3 rounded" alt="Imagem 2">
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
-                <img src="./atividade/img/obras/3.png" class="img-fluid mb-3 rounded" alt="Imagem 3">
+                <img src="./img/obras/3.png" class="img-fluid mb-3 rounded" alt="Imagem 3">
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-12">
-                <img src="./atividade/img/obras/4.png" class="img-fluid mb-3 rounded" alt="Imagem 1">
+                <img src="./img/obras/4.png" class="img-fluid mb-3 rounded" alt="Imagem 1">
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12">
-                <img src="./atividade/img/obras/5.png"class="img-fluid mb-3 rounded" alt="Imagem 2">
+                <img src="./img/obras/5.png"class="img-fluid mb-3 rounded" alt="Imagem 2">
             </div>
         </div>
 
